# da4ml

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  DAIS-spec.md  DAIS.md  README.md  bench.py  convert.py  meson.build  pyproject.toml  setup.py  test_log2_opt  test_log2_opt.cc  wtf.py
.github/workflows/: python-publish.yml  sphinx-build.yml  unit-test.yml
da4ml/: __init__.py  api.py  balanced_reduction.py  cmvm.py  codegen.py  csd.py  fixed_variable.py  graph_compile.py  nb_fixed_precision.py  scoring.py
docs/: conf.py  dais.md  faq.md  getting_started.md  index.rst  install.md  plugin.md  status.md
interperter/: DAISInterpreter.cc  DAISInterpreter.hh
src/da4ml/: __init__.py  api.py  balanced_reduction.py  cmvm.py  graph_compile.py  nb_fixed_precision.py  types.py
src/da4ml/_binary/: .gitignore  __init__.py  cmvm_bin.pyi  dais_bin.pyi
src/da4ml/_binary/cmvm/: api.cc  api.hh  bindings.cc  bit_decompose.cc  bit_decompose.hh  cmvm_core.cc  cmvm_core.hh  debug.cc  indexers.cc  indexers.hh  mat_decompose.cc  mat_decompose.hh  state_opr.cc  state_opr.hh  types.hh
src/da4ml/_binary/cpp/: DAISInterpreter.cc  DAISInterpreter.hh  bindings.cc
src/da4ml/_binary/dais/: DAISInterpreter.cc  DAISInterpreter.hh  bindings.cc
src/da4ml/_cli/: __init__.py  convert.py  report.py
src/da4ml/cmvm/: __init__.py  api.py  balanced_reduction.py  cmvm.py  codegen.py  csd.py  fixed_variable.py  scoring.py  types.py
src/da4ml/cmvm/core/: __init__.py  indexers.py  state_opr.py
src/da4ml/cmvm/util/: mat_decompose.py
src/da4ml/codegen/: __init__.py  cpp.py
src/da4ml/codegen/cpp/: __init__.py  codegen.py  cpp_codegen.py
src/da4ml/codegen/cpp/source/: binder_util.hh
src/da4ml/codegen/hls/: hls_codegen.py  hls_model.py
src/da4ml/codegen/hls/source/: binder_util.hh  build_binder.mk  build_vitis_prj.tcl  build_vivado_hls_prj.tcl
src/da4ml/codegen/rtl/: __init__.py  rtl_model.py
src/da4ml/codegen/rtl/common_source/: binder_util.hh  build_binder.mk  build_quartus_prj.tcl  build_vivado_prj.tcl  template.xdc
src/da4ml/codegen/rtl/verilog/: comb.py  io_wrapper.py  pipeline.py
src/da4ml/codegen/rtl/verilog/source/: binop.v  lookup_table.v  shift_adder.v
src/da4ml/codegen/rtl/vhdl/: comb.py  io_wrapper.py  pipeline.py
src/da4ml/codegen/rtl/vhdl/source/: binop.vhd  lookup_table.vhd  shift_adder.vhd
src/da4ml/codegen/verilog/: __init__.py  comb.py  comb_wrapper.py  io_wrapper.py  pipeline.py  verilog_model.py
src/da4ml/codegen/verilog/source/: Makefile  build_prj.tcl  ioutils.hh  template.xdc
src/da4ml/codegen/vhdl/: comb.py  io_wrapper.py  pipeline.py  vhdl_model.py
src/da4ml/codegen/vhdl/source/: build_binder.mk  build_prj.tcl
src/da4ml/codegen/xls/: __init__.py  xls_codegen.py  xls_model.py
src/da4ml/converter/: __init__.py  example.py  plugin.py
src/da4ml/converter/hgq2/: mirror.py  parser.py  replica.py
src/da4ml/converter/hgq2/layers/: __init__.py  _base.py  activation.py  conv.py  conv_table.py  dense_table.py  ops.py  table.py
src/da4ml/hdl_utils/: binder_gen.py
src/da4ml/trace/: __init__.py  affine_interval.py  fixed_variable.py  fixed_variable_array.py  fixed_veriable.py  pipeline.py  tracer.py
src/da4ml/trace/ops/: __init__.py  bit_oprs.py  bitonic_sort.py  conv_utils.py  einsum_utils.py  histogram.py  quantization.py  reduce_utils.py  sorting.py
src/da4ml/trace/passes/: __init__.py  affine.py  canon.py  cse.py  dce.py  null_op.py  null_quant.py  order.py  out_canon.py  retrace.py  surrogate.py
src/da4ml/typing/: __init__.py
subprojects/: tbb.wrap  xsimd.wrap  xtensor.wrap
subprojects/packagefiles/tbb/: meson.build
subprojects/packagefiles/xsimd/: meson.build
subprojects/packagefiles/xtensor/: meson.build  meson_options.txt
subprojects/packagefiles/xtl/: meson.build
tests/: conftest.py  test_cmvm.py  test_data.tar.xz  test_ops.py  test_ops_extend.py  test_plugin.py  test_report.py
tools/: gitversion.py
