project('tbb', 'cpp', 'c', version: '2022.3.0', license: 'Apache-2.0')

tbb_inc = include_directories('include')

tbb_sources = files(
  'src/tbb/address_waiter.cpp',
  'src/tbb/allocator.cpp',
  'src/tbb/arena.cpp',
  'src/tbb/arena_slot.cpp',
  'src/tbb/concurrent_bounded_queue.cpp',
  'src/tbb/dynamic_link.cpp',
  'src/tbb/exception.cpp',
  'src/tbb/global_control.cpp',
  'src/tbb/governor.cpp',
  'src/tbb/itt_notify.cpp',
  'src/tbb/main.cpp',
  'src/tbb/market.cpp',
  'src/tbb/misc.cpp',
  'src/tbb/misc_ex.cpp',
  'src/tbb/observer_proxy.cpp',
  'src/tbb/parallel_pipeline.cpp',
  'src/tbb/private_server.cpp',
  'src/tbb/profiling.cpp',
  'src/tbb/queuing_rw_mutex.cpp',
  'src/tbb/rml_tbb.cpp',
  'src/tbb/rtm_mutex.cpp',
  'src/tbb/rtm_rw_mutex.cpp',
  'src/tbb/semaphore.cpp',
  'src/tbb/small_object_pool.cpp',
  'src/tbb/task.cpp',
  'src/tbb/task_dispatcher.cpp',
  'src/tbb/task_group_context.cpp',
  'src/tbb/tcm_adaptor.cpp',
  'src/tbb/thread_dispatcher.cpp',
  'src/tbb/threading_control.cpp',
  'src/tbb/thread_request_serializer.cpp',
  'src/tbb/version.cpp',
  'src/tbb/tools_api/ittnotify_static.c',
)

cpp = meson.get_compiler('cpp')
thread_dep = dependency('threads')
dl_dep = cpp.find_library('dl', required: false)

tbb_lib = library('tbb',
  tbb_sources,
  include_directories: tbb_inc,
  dependencies: [thread_dep, dl_dep],
  cpp_args: ['-D__TBB_BUILD=1', '-D_GNU_SOURCE', '-march=native'],
  install: true,
)

tbb_dep = declare_dependency(
  link_with: tbb_lib,
  include_directories: tbb_inc,
)
